# cypher-to-gremlin

./: README.md  antlr4.sh  pyproject.toml  setup.py
cypher_to_gremlin/: __init__.py  cypher_engine.py  cypher_to_gremlin.py  cypher_visitor.py
cypher_to_gremlin/__spi__/: classes.py  protocols.py  types.py
cypher_to_gremlin/__util__/: async_util.py  list_util.py  str_util.py
cypher_to_gremlin/antlr/: Cypher.g4  Cypher.interp  CypherLexer.interp  CypherLexer.py  CypherListener.py  CypherParser.py  CypherVisitor.py
cypher_to_gremlin/element/: oc_atom.py  oc_limit.py  oc_literal.py  oc_match.py  oc_node_label.py  oc_node_pattern.py  oc_order.py  oc_pattern.py  oc_pattern_part.py  oc_property_lookup.py  oc_return.py  oc_single_query.py  oc_sort_item.py  oc_variable.py  oc_where.py
cypher_to_gremlin/element/expression/: oc_and_expression.py  oc_comparison_expression.py  oc_id_in_coll.py  oc_list_predicate_expression.py  oc_non_arithmetic_operator_expression.py  oc_null_predicate_expression.py  oc_or_expression.py  oc_partial_comparison_expression.py  oc_string_list_null_predicate_expression.py
cypher_to_gremlin/element/function/: oc_function_name.py  (+1 more)
cypher_to_gremlin/listener/: error_listener.py
cypher_to_gremlin/mixin/: aggregate_mixin.py  function_mixin.py  literals_mixin.py  operator_mixin.py  property_mixin.py  var_name_mixin.py
cypher_to_gremlin/value_resolver/: delegate_value_resolver.py  eager_value_resolver.py
cypher_to_gremlin/visitor/: labels_visitor.py  resolvable_value_visitor.py
test/: async_cypher_to_gremlin_test.py  cypher_to_gremlin_test.py
(+6 files in other folders)
