[build-system]
requires = ["poetry-core>=1.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cypher-to-gremlin"
version = "0.5.15"
description = "Convert Cypher queries to the Gremlin language"
authors = ["c7nw3r", ]

[tool.poetry.dependencies]
python = ">3.10.0"
antlr4-python3-runtime = "4.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "3.0.0"

[tool.ruff]
target-version = "py312"
select = ["B", "E", "F", "I", "W"]

[tool.ruff.isort]
lines-after-imports = 2
